tests/negative/typecheck/addr_val.orng
// addr_val.orng:7:22: error: expected a value of type `Bool`, got a value of type `Int`
//     let y: &Bool = &x
//                     ^
// 
fn main() -> Int {
    let x = 0
    let y: &Bool = &x
    0
}